# array-language-comparisons

./: .gitignore  Essence.md  Iversonian_vs_Array.md  LICENSE  README.md  identity.md  matrix_identity.md  matrix_iota.md  matrix_reversing.md
.github/workflows/: auto-assign.yml
code/arrayfire/: Makefile  P1351_Count_Negatives.cpp  P1672_Richest_Customer_Wealth.cpp  P1822_Sign_Product_Array.cpp  P2319_Check_Matrix.cpp  matrix_identity.cpp  matrix_iota.cpp  matrix_reversing.cpp  matrix_summing.cpp  readme.cpp
code/aten/: CMakeLists.txt  test.cpp
code/dex/: P0845_MCO.dx  P1351_Count_Negatives.dx  P1672_Richest_Customer_Wealth.dex  P1822_Sign_Product_Array.dx  P2319_Check_Matrix.dx  scan_exploration.dx
code/ivy/: checkmatrix.ivy
code/matlab/: checkMatrix.m  countNegatives.m  maxWealth.m
code/matx/: CMakeLists.txt  P1351_Count_Negatives.cu  P1672_Richest_Customer_Wealth.cu  P1822_Sign_Product_Array.cu  bs.cu  matrix_identity.cu  matrix_iota.cu  matrix_reversing.cu  matrix_summing.cu  readme.cu  test.cpp  test.cu
code/nial/: matrix_identity.nial
code/sac/: 0176_Problem_1.sac  0217_Problem_1.sac  0236_Problem_1.sac  0299_Problem_1.sac  matrix_identity.sac  matrix_iota.sac  matrix_reversing.sac  matrix_summing.sac
comparisons/: matrix_identity.md  matrix_iota.md  matrix_reversing.md  matrix_summing.md
comparisons/leetcode/: P00485_MCO.md  P0064_Max_Gap.md  P00674_LCIS.md  P01614_Max_Paren_Depth.md  P02319_Check_Matrix.md  P0485_MCO.md  P0674_LCIS.md  P1351_Count_Negatives.md  P1614_Max_Paren_Depth.md  P1672_Richest_Customer_Wealth.md  P1822_Sign_Product_Array.md  P2319_Check_Matrix.md
comparisons/pwc/: PWC198_P1_Max_Gap_Count.md
